--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@types/node": "^18.16.19",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
@@ -22,7 +23,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
-    "nuxt-mailer": "^0.11.0",
-    "pinia": "^2.1.4"
+    "nodemailer": "^6.9.4",
+    "pinia": "^2.1.4",
+    "validator": "^13.9.0"
   }
 }
