--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.3",
     "nodemailer": "^6.9.4",
     "pinia": "^2.1.4",
     "validator": "^13.9.0"
