--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
     "nodemailer": "^6.9.4",
+    "nuxt-swiper": "^1.2.0",
     "pinia": "^2.1.4",
     "validator": "^13.9.0"
   }
