--- a/package.json
+++ b/package.json
@@ -23,11 +23,20 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "@types/multer": "^1.4.9",
     "@vuelidate/core": "^2.0.3",
-    "@vuelidate/validators": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "appwrite": "^13.0.0",
+    "axios": "^1.6.0",
+    "moment": "^2.29.4",
+    "mongoose": "^7.4.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nuxt-swiper": "^1.2.0",
     "pinia": "^2.1.4",
+    "slugify": "^1.6.6",
+    "unstorage": "^1.9.0",
+    "uuid": "^9.0.1",
     "validator": "^13.9.0"
   }
 }
