--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nuxt-swiper": "^1.2.2",
+    "nuxt3-meta-pixel": "^1.0.9",
     "pinia": "^2.1.4",
     "slugify": "^1.6.6",
     "unstorage": "^1.9.0",
