--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nuxt-swiper": "^1.2.2",
     "nuxt3-meta-pixel": "^1.0.9",
     "pinia": "^2.1.4",
+    "resend": "^3.3.0",
     "slugify": "^1.6.6",
     "unstorage": "^1.9.0",
     "uuid": "^9.0.1",
