--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^18.16.19",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
+    "dayjs-nuxt": "^2.1.11",
     "nuxt": "^3.6.2",
     "nuxt-icon": "^0.4.2"
   },
